fully functional with bonus content

--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Space+Mono" rel="stylesheet">
   <title>To-Do App</title>
 </head>
 <body>
-  <h1>My To-Do List</h1>
-  <div class="to-do-list">
-  	<ul id="sortable">
-  	</ul>
-  </div>
-  <div class="input-box">
-  	<form>
-  		<input type="text" class="input-to-do" placeholder="To-Do...">
-  		<input type="button" class="submit-button" value="Submit">
-  	</form>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="./js/code.js"></script>
+	<img src="../img/file.jpg" class="file">
+	<div class="wrap">
+	  <h1>My To-Do List</h1>
+	  <div class="to-do-list">
+	  	<ul id="sortable">
+	  	</ul>
+	  </div>
+	  <div class="input-box">
+	  	<input type="text" class="input-to-do" placeholder="To-Do...">
+	  	<input type="button" class="submit-button" value="Submit">
+	  </div>
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+	  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	  <script src="./js/code.js"></script>
+	</div>
 </body>
 </html>
